--- a/locales/cs.json
+++ b/locales/cs.json
@@ -33,9 +33,9 @@
   },
   "velko": {
     "heading": "Velkoobchodní nabídka",
-    "intro": "Homefield je B2B partner pro firmy, značky a reklamní agentury. Dodáváme malé i velké série — rychle, spolehlivě a s jasně nastaveným procesem.",
-    "designText": "Naše modely jsou navrženy tak, aby zaujaly i v jednoduchém provedení. Čistá estetika dává prostor vaší značce, ale zároveň si drží podpis Homefieldu – důraz na materiál, symetrii a dobře zpracované detaily.",
-    "resultText": "Výsledkem je styl, který funguje napříč segmenty a umožní vám vytvořit kolekci, která se neztratí — ať už je jejím cílem prodej, brand awareness nebo firemní identita.",
+    "intro": "**Homefield je B2B partner pro firmy, značky a reklamní agentury.** Dodáváme malé i velké série — rychle, spolehlivě a s jasně nastaveným procesem.",
+    "designText": "**Naše modely jsou navrženy tak, aby zaujaly i v jednoduchém provedení. Čistá estetika dává prostor vaší značce, ale zároveň si drží podpis Homefieldu – důraz na materiál, symetrii a dobře zpracované detaily.**",
+    "resultText": "**Výsledkem je styl, který funguje napříč segmenty a umožní vám vytvořit kolekci, která se neztratí — ať už je jejím cílem prodej, brand awareness nebo firemní identita.**",
     "offerHeading": "co nabízíme:",
     "offer1": "flexibilní výrobu a nízké minimální odběry",
     "offer2": "možnost přípravy vzorků před výrobou",
