--- a/locales/en.json
+++ b/locales/en.json
@@ -33,9 +33,9 @@
   },
   "velko": {
     "heading": "Wholesale Offer",
-    "intro": "Homefield is a B2B partner for companies, brands, and advertising agencies. We deliver small and large series — quickly, reliably, and with a clearly defined process.",
-    "designText": "Our models are designed to impress even in simple execution. Clean aesthetics give space to your brand, but still maintain Homefield's signature – emphasis on material, symmetry, and well-crafted details.",
-    "resultText": "The result is a style that works across segments and allows you to create a collection that won't get lost — whether its goal is sales, brand awareness, or corporate identity.",
+    "intro": "**Homefield is a B2B partner for companies, brands, and advertising agencies.** We deliver small and large series — quickly, reliably, and with a clearly defined process.",
+    "designText": "**Our models are designed to impress even in simple execution. Clean aesthetics give space to your brand, but still maintain Homefield's signature – emphasis on material, symmetry, and well-crafted details.**",
+    "resultText": "**The result is a style that works across segments and allows you to create a collection that won't get lost — whether its goal is sales, brand awareness, or corporate identity.**",
     "offerHeading": "what we offer:",
     "offer1": "flexible production and low minimum orders",
     "offer2": "possibility to prepare samples before production",
