velko forms text edit

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -43,7 +43,7 @@
     "offer4": "krátké výrobní lhůty",
     "offer5": "podporu při designu a technických parametrech",
     "offer6": "výrobu pro privátní značky (private label)",
-    "contactIntro": "Pro konkrétní nabídku služeb nás neváhejte oslovit v kontaktním formuláři:"
+    "contactIntro": "Pro konkrétní nabídku služeb nás neváhejte oslovit v kontaktním formuláři. Rádi pro vás připravíme individuální návrh řešení i orientační kalkulaci."
   },
   "footer": {
     "copyright": "© 2025 Homefield s r.o. Všechna práva vyhrazena.",
