--- a/locales/en.json
+++ b/locales/en.json
@@ -43,7 +43,7 @@
     "offer4": "short production times",
     "offer5": "support with design and technical parameters",
     "offer6": "production for private labels",
-    "contactIntro": "For a specific service offer, please feel free to contact us using the contact form:"
+    "contactIntro": "For a specific service offer, please feel free to contact us using the contact form. We will be happy to prepare an individual solution proposal and cost estimate for you."
   },
   "footer": {
     "copyright": "© 2025 Homefield s r.o. All rights reserved.",
