--- a/locales/cs.json
+++ b/locales/cs.json
@@ -17,7 +17,11 @@
     "styleIntro": "Styl Homefieldu je postavený na čistých liniích, moderní konstrukci a nadčasové jednoduchosti.",
     "styleDetails": "Každý model navrhujeme tak, aby fungoval v běžném životě i v retailové prezentaci – bez ohledu na to, zda jde o **firemní merch, eventovou edici nebo privátní kolekci pro prodej.**",
     "wholesale": "velkoobchod",
-    "retail": "maloobchod"
+    "wholesaleSubtitle": "Homefield jako B2B partner",
+    "wholesaleLink": "zjistěte více o spolupráci",
+    "retail": "maloobchod",
+    "retailSubtitle": "Signature kolekce",
+    "retailLink": "navštivte e-shop"
   },
   "contact": {
     "intro": "V případě jakýchkoliv dotazů nás neváhejte kontaktovat:",
