--- a/locales/en.json
+++ b/locales/en.json
@@ -17,7 +17,11 @@
     "styleIntro": "Homefield's style is built on clean lines, modern construction, and timeless simplicity.",
     "styleDetails": "We design each model to work in everyday life and retail presentation — whether it's **corporate merch, an event edition, or a private collection for sale.**",
     "wholesale": "wholesale",
-    "retail": "retail"
+    "wholesaleSubtitle": "Homefield as a B2B partner",
+    "wholesaleLink": "learn more about cooperation",
+    "retail": "retail",
+    "retailSubtitle": "Signature collection",
+    "retailLink": "visit e-shop"
   },
   "contact": {
     "intro": "If you have any questions, please do not hesitate to contact us:",
